<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center_horizontal"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/horLinearLayoutUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/adres" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/https_cdn_kernel_org_pub_linux_kernel_v5_x_linux_5_4_36_tar_xz"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <Button
            android:id="@+id/downloadInfoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pobierz_informacje"
            android:layout_marginVertical="15dp"/>

        <LinearLayout
            android:id="@+id/verLinearLayoutFileInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/horLinearLayoutFileSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fileSizeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.80"
                    android:text="@string/rozmiar_pliku" />

                <TextView
                    android:id="@+id/fileSizeEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:text="@string/_0" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/horLinearLayoutFileType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fileTypeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/typ_pliku" />

                <TextView
                    android:id="@+id/fileTypeEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:text="@string/_0" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/downloadFileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pobierz_plik"
            android:layout_marginVertical="15dp"/>

        <LinearLayout
            android:id="@+id/horLinearLayoutBytesDownloaded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/downloadedBytesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.74"
                android:text="@string/pobrano_bajt_w" />

            <TextView
                android:id="@+id/downloadedBytesEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/_0" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</ScrollView>